<resources>
    <string name="app_name">Dishes</string>
    <string name="action_settings">Settings</string>
    <string name="eat_string">Eat</string>
    <string name="cook_string">Cook</string>

    <string name="password_string">Password</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>

    <string name="enter_name_hint">Enter Your Name/Username</string>
    <string name="name_string">Username</string>

    <string name="enter_email_hint">Enter Email</string>
    <string name="email_string">Email</string>

    <string name="enter_address_hint">Enter Address</string>
    <string name="address_string">Address</string>

    <string name="enter_dish_hint">Enter Dish</string>
    <string name="dish_string">Dish</string>

    <string name="search_string">Search</string>
    <string name="search_dish_string">Search Dish</string>
    <string name="enter_dish_name_hint">Enter dish to search</string>

    <string name="search_cook_string">Search Cook</string>
    <string name="enter_cook_name_hint">Enter cook to search</string>

    <string name="search_area_string">Search Area</string>
    <string name="enter_area_hint">Enter area to search</string>

    <string name="about">About</string>
    <string name="title_about">This App allows ordinary folk to beomce rich successful chefs or takeways all from the comfort of their own home!</string>

</resources>
