<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_string" >
    </TextView>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress">
    </EditText>

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_string" >
    </TextView>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword">
    </EditText>

    <TextView
        android:id="@+id/address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_string" >
    </TextView>

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address_hint"
        android:inputType="textAutoComplete">
    </EditText>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/register_string" >
    </Button>

</LinearLayout>