<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_dish_string" >
    </TextView>

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_dish_name_hint"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/eat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/search_string"></Button>

</LinearLayout>